RESOLVED FIXED279492
REGRESSION(281090@main): Extremely sluggish animation on Safari TP
https://bugs.webkit.org/show_bug.cgi?id=279492
Summary REGRESSION(281090@main): Extremely sluggish animation on Safari TP
mic.gallego
Reported 2024-09-10 23:30:58 PDT
Created attachment 472521 [details] Sluggish animation on Safari TP Hi, On latest Safari TP, we're experiencing an extremely slow performance on some animations. To reproduce the issue: 1. Open this page: https://prestige-new-version.myshopify.com 2. Enter the password rewblo to enter into the site 3. Go to this page: https://prestige-new-version.myshopify.com/collections/all 4. Open a collapsible in the filter sidebar, and see how sluggish the animation is (Chrome, Firefox and Safari stable show a smooth animation) You can see the attached video showing the sluggish animation on Safari TP.
Attachments
Sluggish animation on Safari TP (1010.18 KB, video/quicktime)
2024-09-10 23:30 PDT, mic.gallego
no flags
Antoine Quint
Comment 1 2024-09-11 02:56:09 PDT
This was like this when we branched for macOS 14.3, looking for the progression point to determine how it got better when we shipped that release.
Antoine Quint
Comment 2 2024-09-11 03:12:25 PDT
It appears to have originally progressed on the macOS 14.3 Safari branch with 272448.813@safari-7618-branch, the fix for bug 271083. The main branch commit was 276633@main, let's see if the main branch behaved correct at that time and determine whether things regressed afterwards.
Antoine Quint
Comment 3 2024-09-11 03:17:59 PDT
Things did look fine with 276633@main, so we have a regression since then. To be clear, the current state is not as bad as pre-276633@main, so it's possible the perf test that was added in that commit did not sufficiently exercise the code path that yielded the performance issue.
Antoine Quint
Comment 4 2024-09-11 03:36:34 PDT
This regressed with 281090@main, the fix for bug 276609.
Radar WebKit Bug Importer
Comment 5 2024-09-11 03:40:02 PDT
mic.gallego
Comment 6 2024-09-17 22:29:26 PDT
For information, the issue is reproducible in the new Safari 18 :(.
Antoine Quint
Comment 7 2024-09-23 02:01:42 PDT
Yes, this is expected as your bug report was filed when that release was already fully "baked".
mic.gallego
Comment 8 2024-10-03 17:47:45 PDT
The issue can still be experienced in TP204.
Sammy Gill
Comment 9 2024-10-24 14:39:33 PDT
mic.gallego
Comment 10 2024-12-05 22:34:08 PST
Issue still reproducible as of TP209.
Sammy Gill
Comment 11 2024-12-10 09:27:40 PST
EWS
Comment 12 2024-12-16 09:48:48 PST
Committed 287890@main (6efee9d4dde0): <https://commits.webkit.org/287890@main> Reviewed commits have been landed. Closing PR #37712 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.